...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weekly_distance_goal_km" />

                <EditText
                    android:id="@+id/editTextNumberWeeklyDistanceGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_weekly_goal"
                    android:inputType="number"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monthly_distance_goal_km" />

                <EditText
                    android:id="@+id/editTextNumberMonthlyDistanceGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_monthly_goal"
                    android:inputType="number"
...
