...
    <string name="choose_image">Choose Image</string>
    <string name="show_map">Show Map</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="goplot_logo">GoPlot Logo</string>
    <string name="track_goals">Track Goals</string>
    <string name="distance_this_week">Distance this week</string>
    <string name="distance_this_month">Distance this month</string>
    <string name="weekly_distance_goal_km">Weekly distance goal (km)</string>
    <string name="enter_weekly_goal">Enter weekly goal</string>
    <string name="monthly_distance_goal_km">Monthly distance goal (km)</string>
    <string name="enter_monthly_goal">Enter monthly goal</string>
...
