...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAnalyseStatistics"
            android:text="@string/analyse_statistics" />

        <Button
            android:id="@+id/buttonTrackGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTrackGoals"
            android:text="@string/track_goals" />

    </LinearLayout>
...
