...
            tools:layout_editor_absoluteY="150dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:contentDescription="@string/an_image_related_to_the_route_selected_by_the_user"
                android:src="@{viewmodel.bitmap}"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/startTimeTextView"
...
